added lit-html and page folders

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quiz-system-fever-spa",
+  "name": "quiz-system-spa",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
